# SampleCode

Cuda/: CMakeLists.txt  build.sh
Cuda/Common/: int_fastdivmod.h  utils.h
Cuda/Transpose/: CMakeLists.txt  main.cu  transpose.h
